--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
