--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cross-env": "^7.0.2",
+    "default-passive-events": "^1.0.10",
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
