--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = 'development'
 VUE_APP_CURRENT_MODE = 'development'
-VUE_APP_URL = 'http://192.168.3.100:5001'
-VUE_APP_SOCKET_URL = 'ws://192.168.3.100:8032/ws/'
+VUE_APP_URL = 'http://nexus.51mypc.cn:83/vue/'
+VUE_APP_SOCKET_URL = 'ws://nexus.51mypc.cn:83/ws/'
