添加流水线

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -30,7 +30,7 @@ http {
 
     server {
         listen       90;
-        server_name  demo.lumia.live;
+        server_name  localhost;
         charset utf-8;
         client_body_buffer_size 10M;
         proxy_redirect     off;
