--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN echo 'Asia/Shanghai' >/etc/timezone
 VOLUME /usr/local/logs/
 ADD nginx.conf /etc/nginx/nginx.conf
-ADD dist/ /usr/share/nginx/html/
+ADD dist.tar.gz /usr/share/nginx/html/
 
 EXPOSE 90
 
