--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('清理代码') {
                 steps {
                     //
-                    sh 'rm -rf * &&  rm -rf .git*'
+                    sh 'rm -rf * &&  rm -rf .git* && rm -rf .env*'
                 }
             }
         }
