--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NODE_ENV = 'development'
 VUE_APP_CURRENT_MODE = 'development'
-VUE_APP_URL = 'http://192.168.3.100:5001'
-VUE_APP_SOCKET_URL = 'ws://192.168.3.100:8032/ws/'
+VUE_APP_URL = 'http://127.0.0.1:5001'
+VUE_APP_SOCKET_URL = 'ws://127.0.0.1:8032/ws/'
+VUE_APP_AES_KEY = 's9_%k.iX]WkFu,1K'
+VUE_APP_AES_IV = '+ira8Z*_xDp?9fY@'
