--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 NODE_ENV = 'development'
 VUE_APP_CURRENT_MODE = 'development'
-VUE_APP_URL = 'http://nexus.51mypc.cn:83/vue/'
-VUE_APP_SOCKET_URL = 'ws://nexus.51mypc.cn:83/ws/'
+VUE_APP_URL = 'http://127.0.0.1:5001'
+VUE_APP_SOCKET_URL = 'ws://127.0.0.1:8032/ws/'
+VUE_APP_AES_KEY = 's9_%k.iX]WkFu,1K'
+VUE_APP_AES_IV = '+ira8Z*_xDp?9fY@'
