--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "axios": "^0.19.0",
+    "crypto-js": "^4.0.0",
     "cross-env": "^7.0.2",
     "default-passive-events": "^1.0.10",
     "echarts": "^4.6.0",
