--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VUE_APP_URL = 'http://127.0.0.1:5001'
 VUE_APP_SOCKET_URL = 'ws://127.0.0.1:8032/ws/'
 VUE_APP_AES_KEY = 's9_%k.iX]WkFu,1K'
 VUE_APP_AES_IV = '+ira8Z*_xDp?9fY@'
+VUE_APP_TELNET_ID = 'S098781'
