--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ VUE_APP_URL = 'http://nexus.51mypc.cn:83/vue/'
 VUE_APP_SOCKET_URL = 'ws://nexus.51mypc.cn:83/ws/'
 VUE_APP_AES_KEY = 's9_%k.iX]WkFu,1K'
 VUE_APP_AES_IV = '+ira8Z*_xDp?9fY@'
+VUE_APP_TELNET_ID = 'S098781'
